[package]
name = "ip2asn_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cidr = { version = "0.2.1", features = ["serde"] }
clap = { version = "4.1.8", features = ["derive"] }
futures = "0.3.27"
ip2asn_lib = { path = "../ip2asn_lib" }
notify = "5.1.0"
tokio = { version = "1.26.0", features = ["full"] }
warp = "0.3.3"
