[package]
name = "ip2asn_lib"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "bgptools"
harness = false

[dependencies]
cidr = { version = "0.2.1", features = ["serde"] }
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"
